--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Abu Sufyan Malik",
+  "author": "NAVJOT",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.1.4",
